--- a/.github/workflows/main_overtimeodds.yml
+++ b/.github/workflows/main_overtimeodds.yml
@@ -26,12 +26,15 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
+
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* -r
       
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: node-app
-          path: .
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -54,6 +57,9 @@ jobs:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_E30BEB866A77497F95CCA2B687F28E0A }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_10EA262A30C242BB901D86929BED2CD0 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_586A17AFF80948928086B2679700CF5D }}
+
+      - name: unzip artifact for deployment
+        run: unzip release.zip
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
