--- a/.github/workflows/main_overtimeodds.yml
+++ b/.github/workflows/main_overtimeodds.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - overtimeodds
 
 on:
@@ -27,8 +24,16 @@ jobs:
           npm run build 
           npm run test --if-present
 
-      - name: Zip artifact for deployment
-        run: Compress-Archive . release.zip
+      - name: Prepare deployment folder
+        run: |
+          mkdir deploy
+          cp -r .next deploy/
+          cp -r public deploy/
+          cp package.json deploy/
+          cp next.config.mjs deploy/
+          cp -r node_modules deploy/
+          cd deploy
+          Compress-Archive -Path . -DestinationPath ../release.zip
       
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
@@ -54,9 +59,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_E30BEB866A77497F95CCA2B687F28E0A }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_10EA262A30C242BB901D86929BED2CD0 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_586A17AFF80948928086B2679700CF5D }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID }}
 
       - name: Unzip artifact for deployment
         run: unzip release.zip
@@ -68,4 +73,3 @@ jobs:
           app-name: 'overtimeodds'
           slot-name: 'Production'
           package: .
-          
