updated build automation to be enabled and included it in the yaml workflow

--- a/.github/workflows/main_overtimeodds.yml
+++ b/.github/workflows/main_overtimeodds.yml
@@ -33,6 +33,7 @@ jobs:
           cp next.config.mjs deploy/
           cp -r node_modules deploy/
           cp server.js deploy/
+          cp web.config deploy/
           cd deploy
           Compress-Archive -Path . -DestinationPath ../release.zip
         
