--- a/web.config
+++ b/web.config
@@ -6,14 +6,9 @@
     </handlers>
     <rewrite>
       <rules>
-        <rule name="StaticContent">
-          <action type="Rewrite" url="public{REQUEST_URI}"/>
-        </rule>
         <rule name="DynamicContent">
-          <conditions>
-            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="True"/>
-          </conditions>
-          <action type="Rewrite" url="server.js"/>
+          <match url="/*" />
+          <action type="Rewrite" url="server.js" />
         </rule>
       </rules>
     </rewrite>
